--- a/catalog.html
+++ b/catalog.html
@@ -118,6 +118,7 @@
       <li><a href="#">Сливочное</a></li>
     </ul>
   </nav>
+  <!--  Сортировка-->
   <section class="main-filter">
     <form action="#" method="post">
       <ul>
@@ -167,110 +168,123 @@
       </ul>
     </form>
   </section>
-  <article>
-    <ul class="col1">
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">310&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой
-</span>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">380&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">355&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">415&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-    </ul>
-    <ul class="col2">
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">325&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное с брусничным джемом</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">410&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочно-черничное с цельными ягодами черники </span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">375&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочно-лимонное с карамельной присыпкой</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">320&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное с шоколадной стружкой</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-    </ul>
-    <ul class="col3">
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">440&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочно-ванильное с кусочками шоколада</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">435&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочноe с ментоловым сиропом</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">355&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное с кусочками черного шоколада</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-      <li>
-        <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
-          <span class="ice-item-price">420&#8381;    /кг</span>
-          <span class="ice-item-name">Сливочное с мятным сиропом</span>
-          <button class="red-btn">Быстрый просмотр</button>
-        </section>
-      </li>
-    </ul>
-  </article>
+  <!--  основная часть-->
+  <div class="main">
+    <article>
+      <ul class="col1">
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">310&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">380&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">355&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">415&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+      </ul>
+      <ul class="col2">
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">325&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное с брусничным джемом</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">410&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочно-черничное с цельными ягодами черники </span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">375&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочно-лимонное с карамельной присыпкой</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">320&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное с шоколадной стружкой</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+      </ul>
+      <ul class="col3">
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">440&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочно-ванильное с кусочками шоколада</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">435&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочноe с ментоловым сиропом</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">355&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное с кусочками черного шоколада</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+        <li>
+          <section class="ice-item">
+            <img src="#" alt="img-icecream" width="#" height="#">
+            <span class="ice-item-price">420&#8381;    /кг</span>
+            <span class="ice-item-name">Сливочное с мятным сиропом</span>
+            <button class="red-btn">Быстрый просмотр</button>
+          </section>
+        </li>
+      </ul>
+    </article>
+  </div>
+  <!--  Пагинатор-->
+  <div class="paginator">
+    <a class="prev disabled" href="#prev">Назад</a>
+    <a class="current" href="#1">1</a>
+    <a href="#2">2</a>
+    <a href="#3">3</a>
+    <a href="#4">4</a>
+    <a href="#5">5</a>
+    <a class="next" href="#next">Вперёд</a>
+  </div>
+  <!--  футер-->
   <footer class="main-footer">
     <div class="container">
       <section class="footer-social">
