--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <form action="#" method="post">
                 <input type="email" name="email" placeholder="Электронная почта">
                 <input type="password" name="password" placeholder="Пароль">
-                  <input class="login website red-btn" type="button" name="button" value="Войти">
+                <input class="login website red-btn" type="button" name="button" value="Войти">
               </form>
               <div class="forgot-check">
                 <a href="#">Забыли пароль?</a>
@@ -116,13 +116,13 @@
       <h2>Малинка даром</h2>
       <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
       </p>
-        <a href="#" class="red-btn">Хочу варенье!</a>
+      <a href="#" class="red-btn">Хочу варенье!</a>
     </article>
     <article class="chocolate-share">
       <h2>Шоколадки даром</h2>
       <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
       </p>
-        <a href="#" class="red-btn">Хочу шоколадки!</a>
+      <a href="#" class="red-btn">Хочу шоколадки!</a>
     </article>
   </section>
   <!--  Хиты продаж-->
@@ -177,64 +177,53 @@
 -->
   <!-- v2-->
   <article>
-      <ul class="col1">
-        <li>
-          <section class="ice-item hit-sales">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">310&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item hit-sales">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">380&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item hit-sales">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">355&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item hit-sales">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">415&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-      </ul>
+    <div class="col1">
+
+      <section class="ice-item hit-sales">
+        <img src="#" alt="img-icecream" width="#" height="#">
+        <span class="ice-item-price">310&#8381;    /кг</span>
+        <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+        <a class="red-btn">Быстрый просмотр</a>
+      </section>
+
+      <section class="ice-item hit-sales">
+        <img src="#" alt="img-icecream" width="#" height="#">
+        <span class="ice-item-price">380&#8381;    /кг</span>
+        <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
+        <a class="red-btn">Быстрый просмотр</a>
+      </section>
+
+      <section class="ice-item hit-sales">
+        <img src="#" alt="img-icecream" width="#" height="#">
+        <span class="ice-item-price">355&#8381;    /кг</span>
+        <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+        <a class="red-btn">Быстрый просмотр</a>
+      </section>
+
+      <section class="ice-item hit-sales">
+        <img src="#" alt="img-icecream" width="#" height="#">
+        <span class="ice-item-price">415&#8381;    /кг</span>
+        <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
+        <a class="red-btn">Быстрый просмотр</a>
+      </section>
+
+    </div>
   </article>
 
 
-  <section class="features">
+  <section class="about-shop">
     <h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-    <img src="#" alt="значек особенности">
     <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-    <div class="features-item">
-      <img src="#" alt="значек особенности">
-      <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-    </div>
-    <div class="features-item">
-      <img src="#" alt="значек особенности">
-      <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-    </div>
-    <div class="features-item">
-      <img src="#" alt="значек особенности">
-      <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-    </div>
+    <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+    <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+    <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
   </section>
+  
   <section class="news-blog">
-    <img src="#" alt="фон контейнера">
+<!--    <img src="#" alt="фон контейнера">-->
+<!--   фон уберу в css-->
     <p>Новое в нашем блоге</p>
-    <h3>10  способов сервировки фруктовых щербетов к столу</h3>
+    <h3><a href="#">10  способов сервировки фруктовых щербетов к столу</a></h3>
   </section>
   <section class="subscribe">
     <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
