--- a/catalog.html
+++ b/catalog.html
@@ -112,161 +112,147 @@
   </header>
   <nav class="nav-catalog">
     <ul>
-      <li><a>Главная</a></li>
-      <li><a>Каталог</a></li>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
       <li><a>Сливочное</a></li>
     </ul>
   </nav>
   <!--  Сортировка-->
   <section class="main-filter">
     <form action="#" method="post">
-      <ul>
-        <li>
-          <legend>Сортировка:</legend>
-          <select name="sort" id="sort">
-            <option value="popular">по популярности</option>
-            <option value="sort">...</option>
-          </select>
-          <label for="sort-price">Цена: 100 руб. – 500 руб.
-            <input id="sort-price" class="range1" type="range" min="100" max="500" step="1" value="100">
-            <input class="range2" type="range" min="100" max="500" step="1" value="400">
-          </label>
-          <fieldset class="fatness-filter-checkbox">
-            <legend>Жирность:</legend>
-            <input name="fatness" type="radio" value="0" id="fat-0">
-            <label for="fat-0">0%</label>
-            <input name="fatness" type="radio" value="10" id="fat-10" checked>
-            <label for="fat-10">до 10%</label>
-            <input name="fatness" type="radio" value="30" id="fat-30">
-            <label for="fat-30">до 30%</label>
-            <input name="fatness" type="radio" value="more 30" id="fat-more-30">
-            <label for="fat-more-30">выше 30%</label>
-          </fieldset>
-        </li>
-        <li>
-          <fieldset>
-            <legend>Наполнители</legend>
-            <input type="checkbox" name="shocolad" id="shocolad">
-            <label for="shocolad">шоколадные</label>
-            <input type="checkbox" name="sugar" id="sugar">
-            <label for="sugar">сахарные присыпки</label>
-            <input type="checkbox" name="fruit" id="fruit">
-            <label for="fruit">фрукты</label>
-            <input type="checkbox" name="syrup" id="syrup">
-            <label for="syrup">сиропы</label>
-            <input type="checkbox" name="jam" id="jam">
-            <label for="jam">джемы</label>
-          </fieldset>
-          <button type="submit" class="use-filters">Применить</button>
-        </li>
-      </ul>
+      <fieldset class="filter-sort">
+        <legend>Сортировка:</legend>
+        <select name="sort" id="sort">
+          <option value="popular">по популярности</option>
+          <option value="cost">по цене</option>
+          <option value="fatness">по жирности</option>
+        </select>
+      </fieldset>
+      <label for="sort-price">Цена: 100 руб. – 500 руб.
+        <input id="sort-price" class="range1" type="range" min="100" max="500" step="1" value="100">
+        <input class="range2" type="range" min="100" max="500" step="1" value="400">
+      </label>
+      <fieldset class="fatness-filter-checkbox">
+        <legend>Жирность:</legend>
+        <input name="fatness" type="radio" value="0" id="fat-0">
+        <label for="fat-0">0%</label>
+        <input name="fatness" type="radio" value="10" id="fat-10" checked>
+        <label for="fat-10">до 10%</label>
+        <input name="fatness" type="radio" value="30" id="fat-30">
+        <label for="fat-30">до 30%</label>
+        <input name="fatness" type="radio" value="more 30" id="fat-more-30">
+        <label for="fat-more-30">выше 30%</label>
+      </fieldset>
+      <fieldset>
+        <legend>Наполнители</legend>
+        <input type="checkbox" name="shocolad" id="shocolad">
+        <label for="shocolad">шоколадные</label>
+        <input type="checkbox" name="sugar" id="sugar">
+        <label for="sugar">сахарные присыпки</label>
+        <input type="checkbox" name="fruit" id="fruit">
+        <label for="fruit">фрукты</label>
+        <input type="checkbox" name="syrup" id="syrup">
+        <label for="syrup">сиропы</label>
+        <input type="checkbox" name="jam" id="jam">
+        <label for="jam">джемы</label>
+      </fieldset>
+      <button type="submit" class="use-filters">Применить</button>
     </form>
   </section>
   <!--  основная часть-->
   <div class="main">
     <article>
-      <ul class="col1">
-        <li>
-          <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">310&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">380&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">355&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-        <li>
-          <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">415&#8381;    /кг</span>
-            <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
-            <a class="red-btn">Быстрый просмотр</a>
-          </section>
-        </li>
-      </ul>
-      <ul class="col2">
-        <li>
+      <div class="col1">
+
+        <section class="ice-item">
+          <img src="#" alt="img-icecream" width="#" height="#">
+          <span class="ice-item-price">310&#8381;    /кг</span>
+          <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+          <a class="red-btn">Быстрый просмотр</a>
+        </section>
+
+        <section class="ice-item">
+          <img src="#" alt="img-icecream" width="#" height="#">
+          <span class="ice-item-price">380&#8381;    /кг</span>
+          <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
+          <a class="red-btn">Быстрый просмотр</a>
+        </section>
+
+        <section class="ice-item">
+          <img src="#" alt="img-icecream" width="#" height="#">
+          <span class="ice-item-price">355&#8381;    /кг</span>
+          <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+          <a class="red-btn">Быстрый просмотр</a>
+        </section>
+
+        <section class="ice-item">
+          <img src="#" alt="img-icecream" width="#" height="#">
+          <span class="ice-item-price">415&#8381;    /кг</span>
+          <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
+          <a class="red-btn">Быстрый просмотр</a>
+        </section>
+      </div>
+      <div class="col2">
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">325&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с брусничным джемом</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">410&#8381;    /кг</span>
             <span class="ice-item-name">Сливочно-черничное с цельными ягодами черники </span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">375&#8381;    /кг</span>
             <span class="ice-item-name">Сливочно-лимонное с карамельной присыпкой</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">320&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с шоколадной стружкой</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-      </ul>
-      <ul class="col3">
-        <li>
+      </div>
+      <div class="col3">
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">440&#8381;    /кг</span>
             <span class="ice-item-name">Сливочно-ванильное с кусочками шоколада</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">435&#8381;    /кг</span>
             <span class="ice-item-name">Сливочноe с ментоловым сиропом</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">355&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с кусочками черного шоколада</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-        <li>
+          
           <section class="ice-item">
             <img src="#" alt="img-icecream" width="#" height="#">
             <span class="ice-item-price">420&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с мятным сиропом</span>
             <button class="red-btn">Быстрый просмотр</button>
           </section>
-        </li>
-      </ul>
+          
+      </div>
     </article>
   </div>
   <!--  Пагинатор-->
